# machinekit

./: CMakeLists.txt
cmake/modules/: Dependencies.cmake  LinkIncludes.cmake  Macros.cmake  Options.cmake  RpathHack.cmake
scripts/: CMakeLists.txt  haltcl.in
src/: CMakeLists.txt  config.h.in
src/emc/canterp/: canterp.cc
src/emc/rs274ngc/: previewmodule.cc
src/hal/: CMakeLists.txt
src/hal/classicladder/: CMakeLists.txt
src/hal/cython/: CMakeLists.txt  setup.py.in
src/hal/cython/machinekit/: CMakeLists.txt
src/hal/drivers/: CMakeLists.txt  hal_gpiomap.c  hal_gpiouse.c  hal_motenc.c  hal_stg.c  hal_vti.c  mesa_7i65.comp  mesa_uart.comp  pluto_servo.comp  pluto_step.comp
src/hal/drivers/mesa-hostmot2/: abs_encoder.c  hm2_7i43.c  hm2_7i90.c  hm2_eth.c  hm2_pci.c  hm2_test.c
src/hal/lib/: CMakeLists.txt
src/hal/utils/: CMakeLists.txt
src/libnml/inifile/: CMakeLists.txt
src/machinetalk/lib/: CMakeLists.txt
src/machinetalk/msgcomponents/: pbmsgs.h  pbring.c
src/machinetalk/nanopb/: CMakeLists.txt
src/machinetalk/proto/: CMakeLists.txt
src/machinetalk/support/: linmove.cc  npbdecode.c  rawread.c  rtprintf.c  sizes.c  unionread.c
src/machinetalk/webtalk/: cdecode.c
src/rtapi/: CMakeLists.txt
src/rtapi/rtapi_math/: CMakeLists.txt
src/rtapi/shmdrv/: CMakeLists.txt
